footer overflow problem solve

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -329,7 +329,7 @@ button {
     padding: 110px 30px;
     margin-top: 50px;
     background: rgba(19, 19, 24, 0.05);
-    width: 100%;
+    width: 95%;
     text-align: center;
 }
 
